ログイン処理apiの実装

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: /bin/sh -c "go run migrate/migrate.go"
+    command: /bin/sh -c "GO_ENV=dev go run main.go"
     env_file: .env
     stdin_open: true
     tty: true
